--- a/UpCode/app/main/sass/_media.sass
+++ b/UpCode/app/main/sass/_media.sass
@@ -9,6 +9,8 @@
 		margin-left: -75px
 	.header-search .header-search-btn
 		right: -40px
+	nav .sf-menu>li
+		margin-right: 35px
 	////// choose section
 	.choose-wrap
 		justify-content: center
@@ -18,17 +20,18 @@
 		&:last-child, &:first-child
 			margin-right: auto
 			margin-left: auto
+	//// contact
 	.contact-form input
 		width: 100%
 		margin-left: 0
 	.contact-form textarea
 		width: 100%
-	nav .sf-menu>li
-		margin-right: 35px
+	// footer
 	.footer-line
 		margin-top: 0
 		
 @media only screen and (max-width : 1024px)
+	// header
 	.hamburger
 		display: flex
 		top: -12px
@@ -154,7 +157,6 @@
 		font-size: 16px
 	.banner-carousel .owl-dots
 		bottom: 40px
-
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px)
