--- a/UpCode/app/main/sass/main.sass
+++ b/UpCode/app/main/sass/main.sass
@@ -684,12 +684,13 @@ label
 	position: absolute
 	bottom: 87px
 	right: 60px
+	transition: all .3s ease
 	&:hover
-		background-color: lighten($yellow, 5%)
+		background-color: lighten($yellow, 15%)
 		&::after
 			opacity: .22
 	&:active
-		background-color: darken($yellow, 5%)
+		background-color: darken($yellow, 15%)
 		&::after
 			opacity: .32
 
